Замена шрифта в TextView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:text="Домашняя работа №1"
+            android:textStyle="bold|italic"
             android:textSize="20sp" />
 
         <EditText
@@ -36,8 +37,9 @@
             android:id="@+id/button"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/teal_200"
             android:text="Button" />
 
         <Switch
