--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,5 +80,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <include
+        android:id="@+id/additional_layout"
+        layout="@layout/additional_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        />
+
 
 </LinearLayout>
