--- a/app/src/main/res/layout/additional_layout.xml
+++ b/app/src/main/res/layout/additional_layout.xml
@@ -20,6 +20,7 @@
         android:ems="10"
         android:hint="ФИО"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textStyle="italic"
         android:typeface="sans" />
 
@@ -29,7 +30,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Номер телефона"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:minHeight="48dp" />
 
     <EditText
         android:id="@+id/editTextNumber"
@@ -37,7 +39,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Номер банковской карты"
-        android:inputType="number" />
+        android:inputType="number"
+        android:minHeight="48dp" />
 
     <EditText
         android:id="@+id/editTextTextPassword2"
@@ -45,7 +48,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Пароль от карты"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:minHeight="48dp" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -53,6 +57,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="email куда отправить благодарность"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp" />
 
 </LinearLayout>
