Добавлено поле с промежутками margin.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_marginStart="30dp"
         android:text="@string/_1"
         android:textSize="@dimen/key_text_size"
-
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
@@ -59,6 +59,7 @@
 
         android:text="@string/_2"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button1"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button1"
@@ -72,6 +73,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_3"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button2"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button2"
@@ -86,6 +88,7 @@
         android:layout_marginStart="30dp"
         android:text="@string/_4"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button1"
@@ -98,6 +101,7 @@
 
         android:text="@string/_5"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button4"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button4"
@@ -111,6 +115,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_6"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button5"
@@ -125,6 +130,7 @@
         android:layout_marginStart="30dp"
         android:text="@string/_7"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4"
@@ -136,6 +142,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_8"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button7"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button7"
@@ -148,6 +155,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_9"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button8"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button8"
@@ -160,6 +168,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_0"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button16"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button16"
@@ -173,6 +182,7 @@
 
         android:text="@string/_equal"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
@@ -186,6 +196,7 @@
 
         android:text="@string/_dot"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button0"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button0"
@@ -198,6 +209,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_plus"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button3"
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toTopOf="@+id/button3"
@@ -209,6 +221,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_divide"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button9"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button9"
@@ -219,11 +232,10 @@
         android:id="@+id/button13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/key_margin"
         android:text="@string/_multiplication"
         android:textSize="@dimen/key_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/button15"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button15"
         app:layout_constraintTop_toTopOf="@+id/button15"
@@ -235,6 +247,7 @@
         android:layout_height="wrap_content"
         android:text="@string/_subtraction"
         android:textSize="@dimen/key_text_size"
+        android:layout_margin="@dimen/key_margin"
         app:layout_constraintBottom_toBottomOf="@+id/button6"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/button6"
@@ -245,7 +258,8 @@
         android:id="@+id/button16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_margin="@dimen/key_margin"
+        android:layout_marginStart="4dp"
         android:text="@string/_c"
         android:textSize="@dimen/key_text_size"
         app:layout_constraintHorizontal_chainStyle="packed"
